# decklink-sdk

./: CMakeLists.txt  ReadMe.rtf
Examples/: Examples.sln
Examples/Win/: AutomaticModeDetection.vcproj  DeviceNotification.vcproj  RP188VitcOutput.vcproj  VancOutput.vcproj
Win/DirectShow/: DeckLink DirectShow SDK.chm
Win/DirectShow/Samples/include/: DecklinkFilters_h.h  GMFBridge_h.h
debian/: changelog  control  copyright  rules
